# icfpc2013

./: .gitignore  README.md
resources/: 137.programs  42.programs  exclude-bonuses.sh  icfpc2013.pem  myproblems.json  solvable01.ids  solvable01.psv  unsolved-no-bonuses.json
src/: Makefile  bench.hs  unmatched.cabal
src/client/: client.hs
src/client-lib/: FileClient.hs  HsClient.hs  HttpClient.hs  ProgramCounting.hs  StringClient.hs
src/fake-server/: FakeServer.hs
src/server-api/: Server.hs  ServerAPI.hs  URLs.hs
src/sexp-select/: README  sexp-select.hs  some.sexp
src/solver/: Filter.hs  Types.hs  solver.hs  test.hs
src/solver-lib/: Filter.hs  Gen.hs  PP.hs  ParSearch.hs  ProgramCounting.hs  RandomBV.hs  Solve.hs  Types.hs
src/solver-lib/ParSearch/: Logic.hs
src/test/: benchmark.hs  run.hs
src/unmatched-fake-server/: Makefile  unmatched-fake-server.cabal
