name:               unmatched
version:            0.1.0.0
-- synopsis:
-- description:
license:            AllRightsReserved
--license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Web
build-type:         Simple
cabal-version:      >=1.8

executable fake-server
  main-is: fake-server/FakeServer.hs           
  -- other-modules:       
  build-depends:    aeson             >= 0.6
                  , base              == 4.6.*
                  , bytestring        >= 0.10
                  , blaze-builder     >= 0.3
                  , http-types        >= 0.8
                  , wai               >= 1.4
                  , warp              >= 1.3
                  , unmatched

  extensions:       OverloadedStrings

library
  build-depends:    aeson             >= 0.6
                  , base              == 4.6.*
                  , HTTP
                  , smallcheck
                  , text              >= 0.11
                  , vector            >= 0.10
                  , pretty            >= 1.1.1
                  , bytestring        >= 0.10
                  , pretty

  hs-source-dirs:   server-api, solver-lib, client-lib
  exposed-modules:  ServerAPI
                  , Types
                  , RandomBV
                  , Filter
                  , PP
                  , HsClient
                  , StringClient
                  , URLs

executable client
  hs-source-dirs:  ./client
  main-is: client.hs
  build-depends:    base == 4.6.*
                  , HTTP
                  , unmatched
                  , aeson             >= 0.6
                  , bytestring        >= 0.10
                  , optparse-applicative >= 0.5.2.1

executable solver
  hs-source-dirs: solver
  build-depends: base, unmatched, smallcheck
  main-is: solver.hs
