name:               unmatched
version:            0.1.0.0
-- synopsis:
-- description:
license:            AllRightsReserved
--license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Web
build-type:         Simple
cabal-version:      >=1.8

executable fake-server
  main-is: fake-server/FakeServer.hs           
  -- other-modules:       
  build-depends:    aeson             >= 0.6
                  , base              == 4.6.*
                  , bytestring        >= 0.10
                  , blaze-builder     >= 0.3
                  , http-types        >= 0.8
                  , wai               >= 1.4
                  , warp              >= 1.3
                  , unmatched

  extensions:       OverloadedStrings

library
  build-depends:    aeson             >= 0.6
                  , base              == 4.6.*
                  , HTTP
                  , smallcheck
                  , text              >= 0.11
                  , vector            >= 0.10
                  , bytestring        >= 0.10
                  , pretty
                  , containers

  hs-source-dirs:   server-api, solver-lib, client-lib
  exposed-modules:  ServerAPI
                  , Types
                  , Gen
                  , RandomBV
                  , Filter
                  , PP
                  , HsClient
                  , FileClient
                  , StringClient
                  , URLs
                  , Solve

executable client
  hs-source-dirs:  ./client
  main-is: client.hs
  build-depends:    base == 4.6.*
                  , HTTP
                  , unmatched
                  , aeson             >= 0.6
                  , bytestring        >= 0.10
                  , optparse-applicative >= 0.5.2.1
                  , smallcheck
                  , containers

executable benchmark
  hs-source-dirs:  ./test
  main-is: benchmark.hs
  build-depends:    base == 4.6.*
                  , unmatched
                  , smallcheck

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: run.hs
  build-depends:
    base,
    tasty == 0.2,
    tasty-smallcheck == 0.2,
    tasty-hunit == 0.2,
    unmatched,
    uniplate,
    containers,
    smallcheck
