name:               unmatched
version:            0.1.0.0
-- synopsis:
-- description:
license:            AllRightsReserved
--license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Web
build-type:         Simple
cabal-version:      >=1.10

-- executable fake-server
--   Default-language:    Haskell2010
--   main-is: fake-server/FakeServer.hs           
--   -- other-modules:       
--   build-depends:    aeson             >= 0.6
--                   , base
--                   , bytestring        >= 0.10
--                   , blaze-builder     >= 0.3
--                   , http-types        >= 0.8
--                   , wai               >= 1.4
--                   , warp              >= 1.3
--                   , unmatched
--   default-extensions: OverloadedStrings

library
  Default-language:    Haskell2010
  build-depends:    aeson             >= 0.6
                  , array
                  , base
                  , HTTP
                  , smallcheck
                  , text              >= 0.11
                  , vector            >= 0.10
                  , bytestring        >= 0.10
                  , pretty
                  , containers
                  , random
                  , stm
                  , async
                  , logict
                  , mtl

  hs-source-dirs:   server-api, solver-lib, client-lib
  exposed-modules:  ServerAPI
                  , Types
                  , Gen
                  , RandomBV
                  , Filter
                  , ParSearch
                  , ParSearch.Logic
                  , PP
                  , HsClient
                  , FileClient
                  , StringClient
                  , URLs
                  , Solve
                  , ProgramCounting

executable client
  Default-language:    Haskell2010
  hs-source-dirs:  ./client
  main-is: client.hs
  build-depends:    base
                  , HTTP
                  , unmatched
                  , aeson             >= 0.6
                  , bytestring        >= 0.10
                  , optparse-applicative >= 0.5.2.1
                  , smallcheck
                  , containers
  ghc-options: -threaded

-- executable benchmark
--   Default-language:    Haskell2010
--   hs-source-dirs:  ./test
--   main-is: benchmark.hs
--   build-depends:    base
--                   , unmatched
--                   , smallcheck

test-suite test
  Default-language:    Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: run.hs
  build-depends:
    base,
    tasty == 0.2,
    tasty-smallcheck == 0.2,
    tasty-hunit == 0.2,
    unmatched,
    uniplate,
    containers,
    smallcheck
